1999-02-13  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (ZERO): New macro.
	(metadata_set): Zero DBTs.
	(metadata_get_list): Likewise.
	(metadata_get_no_dup): Likewise.
	(gnome_metadata_list): Likewise.
	(try_regexs): Likewise.
	(metadata_remove): Don't reuse return value from db.

Thu Feb 11 23:56:18 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c,gnome-url.c: use gnome_config_sync_file instead of
	  gnome_config_sync

1999-02-10  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-metadata.c (app_get_by_type): Do not try to lookup the
	metadata if no information sources were found or loaded.

	* gnome-mime.c (mime_fill_from_file): Remove trailing ':'

	* gnome-paper.c: Use new names GnomePaper and GnomeUnit.  Keep the
	old versions for compatibility with other apps.

1999-02-09  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-exec.c (gnome_execute_shell): no semantic changes at this
	point in the release schedule.  If you need the stuff not to close
	file descriptors, use the proper API.

1999-02-09  Chris Lahey  <clahey@umich.edu>

	* gnome-paper.c: Made the conversion factors a bit more accurate.

1999-02-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-mime-info.h: Constify

1999-02-06  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-metadata.c (maybe_scan_app_dir): It is not necessary to
	cast scan_app_file when passing it to scandir().  Pointed out by
	Frederic L.W.Meunier (linux@urbi.com.br).

1999-02-05  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-config.c (gnome_config_make_vector): Unescape characters
	escaped in gnome_config_assemble_vector.

1999-02-05  Jeff Garzik  <jgarzik@pobox.com>

	* gnome-metadata.c:
	Fix small API doc typo.

1999-02-03  James Henstridge  <james@daa.com.au>

	* gnome-config.h (gnome_config_private_set_*): most of these macros
	were broken.  They specified val as an argument, then didn't use it
	in the expansion.  I changed it to look like the gnome_config_set_*
	macros.
