@@ -1,3 +1,7 @@
+1999-02-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-metadata.c (worker): Added missing call to unlock
+
 1999-02-13  Tom Tromey  <tromey@cygnus.com>
 
 	* gnome-metadata.c (ZERO): New macro.
